@@ -82,6 +82,8 @@ class ObjectSerializer(PropertiesPostProcessor, SimpleItemWithProperties):
         stool = getToolByName(self, 'portal_serializer')
         mapping = {
             'object': object,
+            'proxy': object,
+            'content': object.getContent(),
             'container': aq_parent(aq_inner(object)),
             'user': user,
             'portal': portal,
