@@ -228,14 +228,14 @@ class RdflibGraph(UniqueObject, PortalFolder):
         rdf_graph.add((uid, relation_id, related_uid))
 
     security.declareProtected(View, 'addRelationsFor')
-    def addRelationsFor(self, triplets_list):
+    def addRelationsFor(self, triples_list):
         """Add given relations to the graph
 
-        triplets_list items must be like (uid, relation_id, related_uid)
+        triples_list items must be like (uid, relation_id, related_uid)
         Useful when it's costly to access the graph.
         """
         rdf_graph = self._getGraph()
-        for item in triplets_list:
+        for item in triples_list:
             rdf_graph.add(item)
 
     security.declareProtected(View, 'deleteRelationFor')
@@ -247,14 +247,14 @@ class RdflibGraph(UniqueObject, PortalFolder):
         rdf_graph.remove((uid, relation_id, related_uid))
 
     security.declareProtected(View, 'deleteRelationsFor')
-    def deleteRelationsFor(self, triplets_list):
+    def deleteRelationsFor(self, triples_list):
         """Delete given relations in the graph
 
-        triplets_list items must be like (uid, relation_id, related_uid)
+        triples_list items must be like (uid, relation_id, related_uid)
         Useful when it's costly to access the graph.
         """
         rdf_graph = self._getGraph()
-        for item in triplets_list:
+        for item in triples_list:
             rdf_graph.remove(item)
 
     security.declareProtected(View, 'getValueFor')
