@@ -9,4 +9,6 @@ Bug fixes:
 -
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- Code cleaning
+- Added a new 'content' variable in object serializer expression
+  namespace.
